# OnechanbaraZ2ResP

./: .gitignore  README.md
src/: CMakeLists.txt  REPORT.md  build.cmd
src/OnechanbaraZ2_Resolution/: OnechanbaraZ2_Resolution.ini  main.cpp
src/OnechanbaraZ2_SaveRedirect/: OnechanbaraZ2_SaveRedirect.ini  main.cpp  x64_hook.h
